@@ -16,8 +16,8 @@
 			</last>
 		</scripts>
 		<sql>
-			<db>429</db>
-			<file>429</file>
+			<db>430</db>
+			<file>430</file>
 		</sql>
 	</versions>
 </nzedb>
